[metadata]
name = fd_hash
version = 0.0.1
description = Simple utility to track folder content by generating hash descriptions
long_description = file: README.md
long_description_content_type = text/markdown
author = xirenhua
author_email = xirenhua@outlook.com
url = https://github.com/xirenhua/fd_hash

[options]
packages = find:
install_requires =
    click

[options.entry_points]
console_scripts =
    fdhash = fd_hash.main:fdhash